Add javadoc for all sub-workers